# myterminal

./: .clang-format  CMakeLists.txt  TODO.md  glad.c  main.c  main_old.c  main_old2.c  main_old3.c  pty.c  pty.h  shader.c  shader.h  stb_image.c
gl/: fragment.glsl  test_fs.glsl  test_vs.glsl  vertex.glsl
include/glad/: glad.h
lib/: libcglm.0.dylib
